--- a/Mockup(HTMLCSS)/src/index.html
+++ b/Mockup(HTMLCSS)/src/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DashBoard</title>
+    <title>Financial Dashboard</title>
     <link href="../dist/output.css" rel="stylesheet">
 </head>
-<body class="bg-indigo-600">
+<body class="bg-gradient-to-b from-violet-900 to-violet-700 min-h-screen">
     <!-- Sub-menu (top tabs) -->
-    <nav class="bg-indigo-800 p-4">
-        <div class="container mx-auto flex justify-evenly">
+    <nav class="bg-gradient-to-b from-violet-800 to-violet-900 h-14">
+        <div class="container mx-auto flex justify-evenly h-full">
             <a href="#" class="w-1/2">
-                <div class="text-white hover:text-yellow-400 px-4 py-2 text-center">
+                <div class="hover:text-white text-fuchsia-400 px-4 py-2 text-center h-full">
                     Monthly 
                 </div>
             </a>
             <a href="#" class="w-1/2">
-                <div class="text-white hover:text-yellow-400 px-4 py-2 text-center">
+                <div class="hover:text-white text-fuchsia-400 px-4 py-2 text-center h-full">
                     All time 
                 </div>
             </a>
@@ -25,35 +25,35 @@
 
     <!-- Main Content -->
     <main class="container mx-auto p-4">
-        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Main Content</h1>
-        <p class="text-pink-500">This is your main content. You can add your content, text, images, and more here.</p>
+        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Financial Dashboard</h1>
+        <p class="text-pink-500">This is your financial dashboard. You can view your financial data, transactions, and more here.</p>
     </main>
 
     <!-- Bottom Navigation Bar -->
-    <nav class="bg-indigo-800 fixed bottom-0 left-0 w-full m-auto">
-        <div class="container mx-auto flex justify-between items-center h-20">
+    <nav class="fixed bottom-0 left-0 w-full p-0 bg-violet-800">
+        <div class="container mx-auto flex justify-between items-center h-20 p-0">
             <a href="#" class="w-1/5">
-                <div class="text-white hover:text-yellow-400 h-20 flex items-center justify-center">
+                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
                     Account 
                 </div>
             </a>
             <a href="#" class="w-1/5">
-                <div class="text-white hover:text-yellow-400 h-20 flex items-center justify-center">
+                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
                     Category 
                 </div>
             </a>
             <a href="#" class="w-1/5">
-                <div class="text-white hover:text-yellow-400 h-20 flex items-center justify-center">
-                    DashBoard 
+                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
+                    Dashboard 
                 </div>
             </a>
             <a href="#" class="w-1/5">
-                <div class="text-white hover:text-yellow-400 h-20 flex items-center justify-center">
+                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
                     Budget 
                 </div>
             </a>
             <a href="#" class="w-1/5">
-                <div class="text-white hover:text-yellow-400 h-20 flex items-center justify-center">
+                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
                     Settings 
                 </div>
             </a>
