--- a/Mockup(HTMLCSS)/src/index.html
+++ b/Mockup(HTMLCSS)/src/index.html
@@ -6,9 +6,9 @@
     <title>Financial Dashboard</title>
     <link href="../dist/output.css" rel="stylesheet">
 </head>
-<body class="bg-gradient-to-b from-violet-900 to-violet-700 min-h-screen">
+<body class="bg-gradient-to-b from-violet-900 to-violet-800 min-h-screen">
     <!-- Sub-menu (top tabs) -->
-    <nav class="bg-gradient-to-b from-violet-800 to-violet-900 h-14">
+    <nav class="bg-violet-800 h-14">
         <div class="container mx-auto flex justify-evenly h-full">
             <a href="#" class="w-1/2">
                 <div class="hover:text-white text-fuchsia-400 px-4 py-2 text-center h-full">
@@ -30,9 +30,10 @@
     </main>
 
     <!-- Bottom Navigation Bar -->
-    <nav class="fixed bottom-0 left-0 w-full p-0 bg-violet-800">
+    <nav class="fixed bottom-0 left-0 w-full p-0 bg-violet-900">
         <div class="container mx-auto flex justify-between items-center h-20 p-0">
             <a href="#" class="w-1/5">
+                
                 <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
                     Account 
                 </div>
