--- a/Mockup(HTMLCSS)/src/index.html
+++ b/Mockup(HTMLCSS)/src/index.html
@@ -32,30 +32,34 @@
     <!-- Bottom Navigation Bar -->
     <nav class="fixed bottom-0 left-0 w-full p-0 bg-violet-900">
         <div class="container mx-auto flex justify-between items-center h-20 p-0">
-            <a href="#" class="w-1/5">
-                
-                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
-                    Account 
+            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/account(white).png" alt="accountlogo" class="h-10" srcset="">
+                <div class=" text-sm h-4 flex items-center justify-center">
+                    Account
                 </div>
             </a>
-            <a href="#" class="w-1/5">
-                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
-                    Category 
+            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/category(white).png" alt="accountlogo" class="h-10" srcset="">
+                <div class= text-sm h-4 flex items-center justify-center">
+                    Category
                 </div>
             </a>
-            <a href="#" class="w-1/5">
-                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
-                    Dashboard 
+            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/dashboard(white).png" alt="accountlogo" class="h-10" srcset="">
+                <div class=" text-sm h-4 flex items-center justify-center">
+                    Dashboard
                 </div>
             </a>
-            <a href="#" class="w-1/5">
-                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
-                    Budget 
+            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/saving(white).png" alt="accountlogo" class="h-10" srcset="">
+                <div class=" text-sm h-4 flex items-center justify-center">
+                    Budget
                 </div>
             </a>
-            <a href="#" class="w-1/5">
-                <div class="hover:text-white text-fuchsia-400 h-20 flex items-center justify-center">
-                    Settings 
+            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/settings(white).png" alt="accountlogo" class="h-10" srcset="">
+                <div class=" text-sm h-4 flex items-center justify-center">
+                    Settings
                 </div>
             </a>
         </div>
