--- a/Mockup(HTMLCSS)/src/index.html
+++ b/Mockup(HTMLCSS)/src/index.html
@@ -24,9 +24,26 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="container mx-auto p-4">
-        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Financial Dashboard</h1>
-        <p class="text-pink-500">This is your financial dashboard. You can view your financial data, transactions, and more here.</p>
+    <main class="container mx-auto p-4 flex flex-col justify-center">
+        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Your Dashboard</h1>
+        <div class="container rounded-xl bg-violet-950 opacity-90 h-60 relative flex flex-col justify-between mb-4 overflow-hidden">
+            <h2 class="text-xl font-bold mb-2 text-fuchsia-600 ml-3">Trend</h2>
+            <div class="w-full absolute bottom-0 flex justify-center">
+                <img src="img/trendingchart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-52 max-w-10/12 mx-auto">
+            </div>
+        </div>
+        <div class="container rounded-xl bg-violet-950 h-96 opacity-90 relative flex flex-col justify-between mb-4 overflow-hidden">
+            <h2 class="text-xl font-bold mb-2 text-fuchsia-600 ml-3">Categories Share</h2>
+            <div class=" absolute bottom-0 w-full flex justify-center">
+                <img src="img/categorypiechart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-80 max-w-10/12 mx-auto">
+            </div>
+        </div>
+        <div class="container rounded-xl bg-violet-950 opacity-90 h-60 relative flex flex-col justify-between mb-20 overflow-hidden">
+            <h2 class="text-xl font-bold mb-2 text-fuchsia-600 ml-3">Account Share</h2>
+            <div class="w-full absolute bottom-0 flex justify-center">
+                <img src="img/accountchart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-52 w-10/12 mx-auto">
+            </div>
+        </div>
     </main>
 
     <!-- Bottom Navigation Bar -->
@@ -40,7 +57,7 @@
             </a>
             <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
                 <img src="img/category(white).png" alt="accountlogo" class="h-10" srcset="">
-                <div class= text-sm h-4 flex items-center justify-center">
+                <div class= "text-sm h-4 flex items-center justify-center">
                     Category
                 </div>
             </a>
