update icon name

--- a/Mockup(HTMLCSS)/src/index.html
+++ b/Mockup(HTMLCSS)/src/index.html
@@ -41,7 +41,7 @@
         <div class="container rounded-xl bg-violet-950 opacity-90 h-60 relative flex flex-col justify-between mb-20 overflow-hidden">
             <h2 class="text-xl font-bold mb-2 text-fuchsia-600 ml-3">Account Share</h2>
             <div class="w-full absolute bottom-0 flex justify-center">
-                <img src="img/accountchart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-52 w-10/12 mx-auto">
+                <img src="img/accountchart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-52 max-w-md w-10/12 mx-auto">
             </div>
         </div>
     </main>
@@ -50,31 +50,31 @@
     <nav class="fixed bottom-0 left-0 w-full p-0 bg-violet-900">
         <div class="container mx-auto flex justify-between items-center h-20 p-0">
             <a href="account.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/account(white).png" alt="accountlogo" class="h-10" srcset="">
+                <img src="img/account(white).png" alt="accounticon" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Account
                 </div>
             </a>
             <a href="category.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/category(white).png" alt="accountlogo" class="h-10" srcset="">
+                <img src="img/category(white).png" alt="categoryicon" class="h-10" srcset="">
                 <div class= "text-sm h-4 flex items-center justify-center">
                     Category
                 </div>
             </a>
             <a href="index.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/dashboard(white).png" alt="accountlogo" class="h-10" srcset="">
+                <img src="img/dashboard(white).png" alt="dashboardicon" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Dashboard
                 </div>
             </a>
             <a href="budgetsaving.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/saving(white).png" alt="accountlogo" class="h-10" srcset="">
+                <img src="img/saving(white).png" alt="budgeticono" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Budget
                 </div>
             </a>
             <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/settings(white).png" alt="accountlogo" class="h-10" srcset="">
+                <img src="img/settings(white).png" alt="settingsicon" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Settings
                 </div>
