--- a/Mockup(HTMLCSS)/src/category.html
+++ b/Mockup(HTMLCSS)/src/category.html
@@ -74,32 +74,32 @@
     <!-- Bottom Navigation Bar -->
     <nav class="fixed bottom-0 left-0 w-full p-0 bg-violet-900">
         <div class="container mx-auto flex justify-between items-center h-20 p-0">
-            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/account(white).png" alt="accountlogo" class="h-10" srcset="">
+            <a href="account.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/account(white).png" alt="accounticon" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Account
                 </div>
             </a>
-            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/category(white).png" alt="accountlogo" class="h-10" srcset="">
+            <a href="category.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/category(white).png" alt="categoryicon" class="h-10" srcset="">
                 <div class= "text-sm h-4 flex items-center justify-center">
                     Category
                 </div>
             </a>
-            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/dashboard(white).png" alt="accountlogo" class="h-10" srcset="">
+            <a href="index.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/dashboard(white).png" alt="dashboardicon" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Dashboard
                 </div>
             </a>
-            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/saving(white).png" alt="accountlogo" class="h-10" srcset="">
+            <a href="budgetsaving.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/saving(white).png" alt="budgeticono" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Budget
                 </div>
             </a>
             <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/settings(white).png" alt="accountlogo" class="h-10" srcset="">
+                <img src="img/settings(white).png" alt="settingsicon" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Settings
                 </div>
