--- a/Mockup(HTMLCSS)/src/dashboard-alltime.html
+++ b/Mockup(HTMLCSS)/src/dashboard-alltime.html
@@ -10,12 +10,12 @@
     <!-- Sub-menu (top tabs) -->
     <nav class="bg-violet-800 h-14">
         <div class="container mx-auto flex justify-evenly h-full">
-            <a href="index.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
+            <a href="index.html" class="w-1/2 hover:text-white text-fuchsia-400">
                 <div class=" px-4 py-2 text-center h-full">
                     Monthly 
                 </div>
             </a>
-            <a href="dashboard-alltime.html" class="w-1/2 hover:text-white text-fuchsia-400">
+            <a href="dashboard-alltime.html" class="w-1/2 hover:text-white text-fuchsia-400  bg-violet-900">
                 <div class=" px-4 py-2 text-center h-full">
                     All time 
                 </div>
