--- a/Mockup(HTMLCSS)/src/index.html
+++ b/Mockup(HTMLCSS)/src/index.html
@@ -25,7 +25,7 @@
 
     <!-- Main Content -->
     <main class="container mx-auto p-4 flex flex-col justify-center">
-        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Your Dashboard</h1>
+        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Your Dashboard - Last 30 days</h1>
         <div class="container rounded-xl bg-violet-950 opacity-90 h-60 relative flex flex-col justify-between mb-4 overflow-hidden">
             <h2 class="text-xl font-bold mb-2 text-fuchsia-600 ml-3">Trend</h2>
             <div class="w-full absolute bottom-0 flex justify-center">
