--- a/Mockup(HTMLCSS)/src/account-addaccount.html
+++ b/Mockup(HTMLCSS)/src/account-addaccount.html
@@ -10,14 +10,14 @@
     <!-- Sub-menu (top tabs) -->
     <nav class="bg-violet-800 h-14">
         <div class="container mx-auto flex justify-evenly h-full">
-            <a href="index.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
+            <a href="account.html" class="w-1/2 hover:text-white text-fuchsia-400 ">
                 <div class=" px-4 py-2 text-center h-full">
-                    Monthly 
+                    Overview 
                 </div>
             </a>
-            <a href="dashboard-alltime.html" class="w-1/2 hover:text-white text-fuchsia-400">
+            <a href="account-addaccount.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
                 <div class=" px-4 py-2 text-center h-full">
-                    All time 
+                    Manage Accounts
                 </div>
             </a>
         </div>
@@ -25,25 +25,16 @@
 
     <!-- Main Content -->
     <main class="container mx-auto p-4 flex flex-col justify-center">
-        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Your Dashboard - Last 30 days</h1>
-        <div class="container rounded-xl bg-violet-950 opacity-90 h-60 relative flex flex-col justify-between mb-4 overflow-hidden">
-            <h2 class="text-xl mb-2 text-pink-400 ml-3">Trend</h2>
-            <div class="w-full absolute bottom-0 flex justify-center">
-                <img src="img/trendingchart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-52 max-w-10/12 mx-auto">
-            </div>
+        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Manage Your Accounts</h1>
+
+        <div class="my-4 bg-violet-950 opacity-90 container justify-center rounded-lg p-4">
+            <h2 class="text-lg text-pink-400">Add account</h2>
         </div>
-        <div class="container rounded-xl bg-violet-950 h-96 opacity-90 relative flex flex-col justify-between mb-4 overflow-hidden">
-            <h2 class="text-xl  mb-2 text-pink-400 ml-3">Categories Share</h2>
-            <div class=" absolute bottom-0 w-full flex justify-center">
-                <img src="img/categorypiechart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-80 max-w-10/12 mx-auto">
-            </div>
+        <div class="my-4 p-4 text-pink-400 container bg-violet-950 rounded-lg justify-center">
+            <h2 class="text-lg text-pink-400">Your accounts</h2>
         </div>
-        <div class="container rounded-xl bg-violet-950 opacity-90 h-60 relative flex flex-col justify-between mb-20 overflow-hidden">
-            <h2 class="text-xl  mb-2 text-pink-400 ml-3">Account Share</h2>
-            <div class="w-full absolute bottom-0 flex justify-center">
-                <img src="img/accountchart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-52 max-w-md w-10/12 mx-auto">
-            </div>
-        </div>
+            
+
     </main>
 
     <!-- Bottom Navigation Bar -->
