--- a/Mockup(HTMLCSS)/src/account.html
+++ b/Mockup(HTMLCSS)/src/account.html
@@ -10,14 +10,14 @@
     <!-- Sub-menu (top tabs) -->
     <nav class="bg-violet-800 h-14">
         <div class="container mx-auto flex justify-evenly h-full">
-            <a href="#" class="w-1/2">
-                <div class="hover:text-white text-fuchsia-400 px-4 py-2 text-center h-full">
-                    Monthly 
+            <a href="account.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
+                <div class=" px-4 py-2 text-center h-full">
+                    Overview 
                 </div>
             </a>
-            <a href="#" class="w-1/2">
-                <div class="hover:text-white text-fuchsia-400 px-4 py-2 text-center h-full">
-                    All time 
+            <a href="account-addaccount.html" class="w-1/2 hover:text-white text-fuchsia-400">
+                <div class=" px-4 py-2 text-center h-full">
+                    Manage Accounts
                 </div>
             </a>
         </div>
@@ -27,10 +27,11 @@
     <main class="container mx-auto p-4 flex flex-col justify-center">
         <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Your Account</h1>
 
-    <table>
+    <div class="my-4 bg-violet-950 opacity-90 container justify-center rounded-lg p-4">
+        <table class="text-pink-400 w-full">
             <tr>
-                <th>Account Name</th>
-                <th>Balance</th>
+                <th class="text-start">Account Name</th>
+                <th class="text-start">Balance</th>
             </tr>
             <tr>
                 <td>Checking Account</td>
@@ -44,9 +45,10 @@
                 <td>Credit card</td>
                 <td>$3,50.50</td>
             </tr>
-    </table>
-
-            <h2>Transactions</h2>
+        </table>
+    </div>
+    <div class="my-4 p-4 text-pink-400 container bg-violet-950 rounded-lg justify-center">
+        <h2 class="text-lg font-bold text-fuchsia-600 w-full">Transactions</h2>
             <label for="account-filter">Select an Account:</label>
             <select id="account-filter">
                 <option value="all">All Accounts</option>
@@ -56,11 +58,11 @@
             </select>
             <table>
                 <tr>
-                    <th>Account</th>
-                    <th>Date</th>
-                    <th>Description</th>
-                    <th>Transaction type</th>
-                    <th>Amount</th>
+                    <th class="text-start">Account</th>
+                    <th class="text-start">Date</th>
+                    <th class="text-start">Description</th>
+                    <th class="text-start">Transaction type</th>
+                    <th class="text-start">Amount</th>
                 </tr>
                 <tr>
                     <td>Credit card</td>
@@ -85,6 +87,8 @@
                     <td>$420000</td>
                 </tr>
             </table>
+    </div>
+            
 
     </main>
 
