--- a/Mockup(HTMLCSS)/src/dashboard-alltime.html
+++ b/Mockup(HTMLCSS)/src/dashboard-alltime.html
@@ -27,19 +27,19 @@
     <main class="container mx-auto p-4 flex flex-col justify-center">
         <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Your Dashboard - All Time</h1>
         <div class="container rounded-xl bg-violet-950 opacity-90 h-60 relative flex flex-col justify-between mb-4 overflow-hidden">
-            <h2 class="text-xl font-bold mb-2 text-fuchsia-600 ml-3">Trend</h2>
+            <h2 class="text-xl mb-2 text-pink-400 ml-3">Trend</h2>
             <div class="w-full absolute bottom-0 flex justify-center">
                 <img src="img/trendingchart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-52 max-w-10/12 mx-auto">
             </div>
         </div>
         <div class="container rounded-xl bg-violet-950 h-96 opacity-90 relative flex flex-col justify-between mb-4 overflow-hidden">
-            <h2 class="text-xl font-bold mb-2 text-fuchsia-600 ml-3">Categories Share</h2>
+            <h2 class="text-xl mb-2 text-pink-400 ml-3">Categories Share</h2>
             <div class=" absolute bottom-0 w-full flex justify-center">
                 <img src="img/categorypiechart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-80 max-w-10/12 mx-auto">
             </div>
         </div>
         <div class="container rounded-xl bg-violet-950 opacity-90 h-60 relative flex flex-col justify-between mb-20 overflow-hidden">
-            <h2 class="text-xl font-bold mb-2 text-fuchsia-600 ml-3">Account Share</h2>
+            <h2 class="text-xl mb-2 text-pink-400 ml-3">Account Share</h2>
             <div class="w-full absolute bottom-0 flex justify-center">
                 <img src="img/accountchart.png" alt="dashboard" class=" rounded-xl opacity-60 max-h-52 max-w-md w-10/12 mx-auto">
             </div>
