update dashboard add and acount add

--- a/Mockup(HTMLCSS)/src/account.html
+++ b/Mockup(HTMLCSS)/src/account.html
@@ -50,7 +50,7 @@
     <div class="my-4 p-4 text-pink-400 container bg-violet-950 rounded-lg justify-center">
         <h2 class="text-lg font-bold text-fuchsia-600 w-full">Transactions</h2>
             <label for="account-filter">Select an Account:</label>
-            <select id="account-filter">
+            <select id="account-filter" class="rounded-md opacity-70">
                 <option value="all">All Accounts</option>
                 <option value="checking">Checking Account</option>
                 <option value="savings">Savings Account</option>
