--- a/Mockup(HTMLCSS)/src/category.html
+++ b/Mockup(HTMLCSS)/src/category.html
@@ -10,13 +10,13 @@
     <!-- Sub-menu (top tabs) -->
     <nav class="bg-violet-800 h-14">
         <div class="container mx-auto flex justify-evenly h-full">
-            <a href="#" class="w-1/2">
-                <div class="hover:text-white text-fuchsia-400 px-4 py-2 text-center h-full">
+            <a href="category.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
+                <div class=" px-4 py-2 text-center h-full">
                     Categories 
                 </div>
             </a>
-            <a href="#" class="w-1/2">
-                <div class="hover:text-white text-fuchsia-400 px-4 py-2 text-center h-full">
+            <a href="create-category.html" class="w-1/2 hover:text-white text-fuchsia-400">
+                <div class=" px-4 py-2 text-center h-full">
                     Create 
                 </div>
             </a>
@@ -33,38 +33,50 @@
             <ul class="space-y-5">
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <div class="w-8 h-8 absolute align-middle"><img src="img/clothes.png" alt="clothes"></div>
-                        <span class="ml-12 text-xl font-bold hover:text-white">Clothing</span>
+                        <a href="category-example.html">
+                            <div class="w-8 h-8 absolute align-middle"><img src="img/clothes.png" alt="clothes"></div>
+                            <span class="ml-12 text-xl font-bold hover:text-white">Clothing</span>
+                        </a>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <div class="w-8 h-8 absolute align-middle"><img src="img/burger.png" alt="burger"></div>
-                        <span class="ml-12 text-xl font-bold hover:text-white">Food</span>
+                        <a href="category-example.html">
+                            <div class="w-8 h-8 absolute align-middle"><img src="img/burger.png" alt="burger"></div>
+                            <span class="ml-12 text-xl font-bold hover:text-white">Food</span>
+                        </a>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <div class="w-8 h-8 absolute align-middle"><img src="img/controller.png" alt="controller"></div>
-                        <span class="ml-12 text-xl font-bold hover:text-white">Entertainment</span>
+                        <a href="category-example.html">
+                            <div class="w-8 h-8 absolute align-middle"><img src="img/controller.png" alt="controller"></div>
+                            <span class="ml-12 text-xl font-bold hover:text-white">Entertainment</span>
+                        </a>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <div class="w-8 h-8 absolute align-middle"><img src="img/phone.png" alt="phone"></div>
-                        <span class="ml-12 text-xl font-bold hover:text-white">Technology</span>
+                        <a href="category-example.html">
+                            <div class="w-8 h-8 absolute align-middle"><img src="img/phone.png" alt="phone"></div>
+                            <span class="ml-12 text-xl font-bold hover:text-white">Technology</span>
+                        </a>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <div class="w-8 h-8 absolute align-middle"><img src="img/toothbrush.png" alt="brush"></div>
-                        <span class="ml-12 text-xl font-bold hover:text-white">Hygiene</span>
+                        <a href="category-example.html">
+                            <div class="w-8 h-8 absolute align-middle"><img src="img/toothbrush.png" alt="brush"></div>
+                            <span class="ml-12 text-xl font-bold hover:text-white">Hygiene</span>
+                        </a>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-60">
                     <li>
-                        <div class="w-8 h-8 absolute align-middle"><img src="img/plusbutton.png" alt="plus"></div>
-                        <span class="ml-12 text-xl font-bold hover:text-white">Add New Category</span>
+                        <a href="create-category.html">
+                            <div class="w-8 h-8 absolute align-middle"><img src="img/plusbutton.png" alt="plus"></div>
+                            <span class="ml-12 text-xl font-bold hover:text-white">Add New Category</span>
+                        </a>
                     </li>
                 </div>
             </ul>
