--- a/Mockup(HTMLCSS)/src/category-example.html
+++ b/Mockup(HTMLCSS)/src/category-example.html
@@ -26,13 +26,13 @@
     <!-- Main Content -->
     <main class="container mx-auto p-4 flex flex-col justify-center">
         <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Category name</h1>
-        <p class="text-pink-500 py-2">Category Description</p>
-        <div>
-            <table>
+        <p class="text-pink-500 py-2">This is the description of the category that was selected, it is cool, and awesome and is created if the user makes one when making a category</p>
+        <div class="my-4 bg-violet-950 opacity-90 container justify-center rounded-lg p-4">
+            <table class="text-pink-400 w-full table-auto">
                 <tr>
-                    <th>Item</th>
-                    <th>Date</th>
-                    <th>Price</th>
+                    <th class="text-start">Item</th>
+                    <th class="text-start">Date</th>
+                    <th class="text-start">Price</th>
                 </tr>
                 <tr>
                     <td>Things</td>
@@ -49,7 +49,18 @@
                     <td>2068-09-29</td>
                     <td>$40.00</td>
                 </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="font-bold">Total</td>
+                    <td></td>
+                    <td class="font-bold">$642.00</td>
+                </tr>
             </table>
+
         </div>
        
     </main>
