--- a/Mockup(HTMLCSS)/src/create-category.html
+++ b/Mockup(HTMLCSS)/src/create-category.html
@@ -32,6 +32,8 @@
             <label class="text-lg mb-4 text-fuchsia-400" for="catName">Category Name</label>
             <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" id="catName" name="catName">
             <br>
+            <label class="text-lg mb-4 text-fuchsia-400" for="catDesc">Category Description</label>
+            <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" id="catDesc" name="catDesc">
             <a href="category.html">
                 <button class="object-right bg-pink-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md">Save</button>
             </a>
