another category uipdate

--- a/Mockup(HTMLCSS)/src/create-category.html
+++ b/Mockup(HTMLCSS)/src/create-category.html
@@ -29,13 +29,13 @@
         <p class="text-pink-500 pb-6">Create a category to help organize your Expenses</p>
         
         <div>
-            <label class="text-lg mb-4 text-fuchsia-400" for="catName">Category Name</label>
-            <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" id="catName" name="catName">
+            <label class="text-lg mb-4 text-fuchsia-400" for="catName">Category Name:</label>
+            <input class="w-full py-4 px-4 rounded-xl mb-4 oborder-gray-300 focus:outline-none focus:ring focus:ring-pink-400 focus:opacity-100 opacity-80" type="text" id="catName" name="catName" placeholder="Name of the Category">
             <br>
-            <label class="text-lg mb-4 text-fuchsia-400" for="catDesc">Category Description</label>
-            <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" id="catDesc" name="catDesc">
+            <label class="text-lg mb-4 text-fuchsia-400" for="catDesc">Category Description:</label>
+            <input class="w-full py-4 px-4 rounded-xl mb-4 border-gray-300 focus:outline-none focus:ring focus:ring-pink-400 focus:opacity-100 opacity-80" type="text" id="catDesc" name="catDesc" placeholder="What is the category about">
             <a href="category.html">
-                <button class="object-right bg-pink-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md">Save</button>
+                <button type="submit" class="bg-pink-400 text-white p-2 rounded-lg hover:bg-pink-600 focus:outline-none focus:ring focus:ring-pink-400">Save</button>
             </a>
         </div>
     </main>
