save button update

--- a/Mockup(HTMLCSS)/src/create-category.html
+++ b/Mockup(HTMLCSS)/src/create-category.html
@@ -35,7 +35,7 @@
             <label class="text-lg mb-4 text-fuchsia-400" for="catDesc">Category Description:</label>
             <input class="w-full py-4 px-4 rounded-xl mb-4 border-gray-300 focus:outline-none focus:ring focus:ring-pink-400 focus:opacity-100 opacity-80" type="text" id="catDesc" name="catDesc" placeholder="What is the category about">
             <a href="category.html">
-                <button type="submit" class="bg-pink-400 text-white p-2 rounded-lg hover:bg-pink-600 focus:outline-none focus:ring focus:ring-pink-400">Save</button>
+                <button type="submit" class="bg-pink-400 text-white p-2 rounded-lg hover:bg-pink-600 focus:outline-none focus:ring focus:ring-pink-400 space-y-custom w-full">Save</button>
             </a>
         </div>
     </main>
