category style consistency update

--- a/Mockup(HTMLCSS)/src/create-category.html
+++ b/Mockup(HTMLCSS)/src/create-category.html
@@ -28,7 +28,7 @@
         <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Create Category</h1>
         <p class="text-pink-500 pb-6">Create a category to help organize your Expenses</p>
         
-        <div>
+        <div class="container rounded-xl bg-violet-950 opacity-90 relative flex flex-col justify-between mb-4 overflow-hidden p-4">
             <label class="text-lg mb-4 text-fuchsia-400" for="catName">Category Name:</label>
             <input class="w-full py-4 px-4 rounded-xl mb-4 oborder-gray-300 focus:outline-none focus:ring focus:ring-pink-400 focus:opacity-100 opacity-80" type="text" id="catName" name="catName" placeholder="Name of the Category">
             <br>
