--- a/Mockup(HTMLCSS)/src/category.html
+++ b/Mockup(HTMLCSS)/src/category.html
@@ -29,9 +29,9 @@
         <p class="text-pink-500 py-2">Keep track of what you spend money on!  </p>
         <!-- <img src="clothes.png" alt="clothes"> -->
         <!--List of Categories-->
-        <div>
+        <div class="container rounded-xl bg-violet-950 opacity-90 relative flex flex-col justify-between mb-4 overflow-hidden p-4">
             <ul class="space-y-5">
-                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
+                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-pink-400 opacity-90">
                     <li>
                         <a href="category-example.html">
                             <div class="w-8 h-8 absolute align-middle"><img src="img/clothes.png" alt="clothes"></div>
@@ -39,7 +39,7 @@
                         </a>
                     </li>
                 </div>
-                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
+                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-pink-400 opacity-90">
                     <li>
                         <a href="category-example.html">
                             <div class="w-8 h-8 absolute align-middle"><img src="img/burger.png" alt="burger"></div>
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                 </div>
-                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
+                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-pink-400 opacity-90">
                     <li>
                         <a href="category-example.html">
                             <div class="w-8 h-8 absolute align-middle"><img src="img/controller.png" alt="controller"></div>
@@ -55,7 +55,7 @@
                         </a>
                     </li>
                 </div>
-                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
+                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-pink-400 opacity-90">
                     <li>
                         <a href="category-example.html">
                             <div class="w-8 h-8 absolute align-middle"><img src="img/phone.png" alt="phone"></div>
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                 </div>
-                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
+                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-pink-400 opacity-90">
                     <li>
                         <a href="category-example.html">
                             <div class="w-8 h-8 absolute align-middle"><img src="img/toothbrush.png" alt="brush"></div>
@@ -71,7 +71,7 @@
                         </a>
                     </li>
                 </div>
-                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-60">
+                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-pink-400 opacity-60">
                     <li>
                         <a href="create-category.html">
                             <div class="w-8 h-8 absolute align-middle"><img src="img/plusbutton.png" alt="plus"></div>
