update account text

--- a/Mockup(HTMLCSS)/src/account.html
+++ b/Mockup(HTMLCSS)/src/account.html
@@ -61,30 +61,30 @@
                     <th class="text-start">Account</th>
                     <th class="text-start">Date</th>
                     <th class="text-start">Description</th>
-                    <th class="text-start">Transaction type</th>
+                    <!-- <th class="text-start">Transaction type</th> -->
                     <th class="text-start">Amount</th>
                 </tr>
                 <tr>
                     <td>Credit card</td>
                     <td>2023-11-01</td>
                     <td>post Helloween cheap candies!</td>
-                    <td>Expense</td>
-                    <td>$300.00</td>
+                    <!-- <td>Expense</td> -->
+                    <td>-$300.00</td>
                 </tr>
                 <tr>
                     <td>Chequing account</td>
                     <td>2023-10-24</td>
                     <td>Rent</td>
-                    <td>Expense</td>
-                    <td>$1,500.00</td>
+                    <!-- <td>Expense</td> -->
+                    <td>-$1,500.00</td>
                 </tr>
 
                 <tr>
                     <td>Savings account</td>
                     <td>2023-01-01</td>
                     <td>Kidney sold</td>
-                    <td>Income</td>
-                    <td>$420000</td>
+                    <!-- <td>Income</td> -->
+                    <td>+$420000</td>
                 </tr>
             </table>
     </div>
