--- a/Mockup(HTMLCSS)/src/category-example.html
+++ b/Mockup(HTMLCSS)/src/category-example.html
@@ -86,8 +86,8 @@
                     Dashboard
                 </div>
             </a>
-            <a href="budgetsaving.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/saving(white).png" alt="budgeticono" class="h-10" srcset="">
+            <a href="budget.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+                <img src="img/budget(white).png" alt="budgeticono" class="h-10" srcset="">
                 <div class=" text-sm h-4 flex items-center justify-center">
                     Budget
                 </div>
