--- a/Mockup(HTMLCSS)/src/create-budget.html
+++ b/Mockup(HTMLCSS)/src/create-budget.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Financial Dashboard</title>
+    <title>Budget</title>
     <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body class="bg-gradient-to-b from-violet-900 to-violet-800 min-h-screen">
     <!-- Sub-menu (top tabs) -->
     <nav class="bg-violet-800 h-14">
         <div class="container mx-auto flex justify-evenly h-full">
-            <a href="account.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
+            <a href="category.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
                 <div class=" px-4 py-2 text-center h-full">
-                    Overview 
+                    Expenses 
                 </div>
             </a>
-            <a href="account-addaccount.html" class="w-1/2 hover:text-white text-fuchsia-400">
+            <a href="budget-savings.html" class="w-1/2 hover:text-white text-fuchsia-400">
                 <div class=" px-4 py-2 text-center h-full">
-                    Manage Accounts
+                    Savings 
                 </div>
             </a>
         </div>
@@ -25,71 +25,41 @@
 
     <!-- Main Content -->
     <main class="container mx-auto p-4 flex flex-col justify-center">
-        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Your Account</h1>
-
-    <div class="my-4 bg-violet-950 opacity-90 container justify-center rounded-lg p-4">
-        <table class="text-pink-400 w-full">
-            <tr>
-                <th class="text-start">Account Name</th>
-                <th class="text-start">Balance</th>
-            </tr>
-            <tr>
-                <td>Checking Account</td>
-                <td>$2,500.00</td>
-            </tr>
-            <tr>
-                <td>Savings Account</td>
-                <td>$5,000.00</td>
-            </tr>
-            <tr>
-                <td>Credit card</td>
-                <td>$3,50.50</td>
-            </tr>
-        </table>
-    </div>
-    <div class="my-4 p-4 text-pink-400 container bg-violet-950 rounded-lg justify-center">
-        <h2 class="text-lg font-bold text-fuchsia-600 w-full">Transactions</h2>
-            <label for="account-filter">Select an Account:</label>
-            <select id="account-filter" class="rounded-md opacity-70">
-                <option value="all">All Accounts</option>
-                <option value="checking">Checking Account</option>
-                <option value="savings">Savings Account</option>
-                <option value="credits">Credit cards</option>
+        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Create Expense Plan</h1>
+        
+        <div>
+            <label class="text-lg mb-4 text-fuchsia-400" for="planName">Plan Name</label>
+            <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" name="planName">
+            <br/>
+            <label class="text-lg mb-4 text-fuchsia-400" for="cat">Category</label>
+            <br/>
+            <select class="py-4 px-4 rounded-xl opacity-90" name="cat">
+                <option value="clothing">Clothing</option>
+                <option value="food">Food</option>
+                <option value="entertainment">Entertainment</option>
+                <option value="technology">Technology</option>
+                <option value="hygiene">Hygiene</option>
             </select>
-            <table>
-                <tr>
-                    <th class="text-start">Account</th>
-                    <th class="text-start">Date</th>
-                    <th class="text-start">Description</th>
-                    <th class="text-start">Transaction type</th>
-                    <th class="text-start">Amount</th>
-                </tr>
-                <tr>
-                    <td>Credit card</td>
-                    <td>2023-11-01</td>
-                    <td>post Helloween cheap candies!</td>
-                    <td>Expense</td>
-                    <td>$300.00</td>
-                </tr>
-                <tr>
-                    <td>Chequing account</td>
-                    <td>2023-10-24</td>
-                    <td>Rent</td>
-                    <td>Expense</td>
-                    <td>$1,500.00</td>
-                </tr>
+            <br/>
+            <div class="flex items-center justify-between">
+                <label class="text-lg mb-4 text-fuchsia-400" for="sDate">Start Date</label>
+                <input class="w-1/5 py-4 rounded-xl mb-4 opacity-90" type="date" name="sDate">
+                <label class="text-lg mb-4 text-fuchsia-400" for="eDate">End Date</label>
+                <input class="w-1/5 py-4 rounded-xl mb-4 opacity-90" type="date" name="eDate">
+            </div>
+            <label class="text-lg mb-4 text-fuchsia-400" for="limit">Expense Limit ($CAD)</label>
+            <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="number" min="1" name="limit">
+            <br/>
+            <label class="text-lg mb-4 text-fuchsia-400" for="note">Note</label>
+            <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" name="note">
 
-                <tr>
-                    <td>Savings account</td>
-                    <td>2023-01-01</td>
-                    <td>Kidney sold</td>
-                    <td>Income</td>
-                    <td>$420000</td>
-                </tr>
-            </table>
-    </div>
-            
-
+            <a href="budget.html">
+                <button class="object-right bg-pink-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md">Save</button>
+            </a>
+            <a href="budget.html">
+                <button class="object-right hover:text-white font-bold py-2 px-4 rounded-md">Cancel</button>
+            </a>
+        </div>
     </main>
 
     <!-- Bottom Navigation Bar -->
