--- a/Mockup(HTMLCSS)/src/budget-savings.html
+++ b/Mockup(HTMLCSS)/src/budget-savings.html
@@ -38,29 +38,35 @@
             <ul class="space-y-5">
                 <div class="w-full py-0 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <a href="#" class="flex items-center justify-between">
-                            <div class="w-8 h-8 absolute align-middle"><img src="img/saving.png" alt="saving"></div>
-                            <span class="ml-12 text-xl font-bold hover:text-white">My Lamborghini Plan</span>
+                        <div class="flex items-center justify-between">
+                            <img src="img/saving.png" alt="expense" class="w-14 h-14 absolute align-middle">
+                            <details class="relative">
+                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">My Lamborghini Plan</summary>
+                            </details>
                             <img src="img/79.png" alt="progress" class="max-h-52">
-                        </a>
+                        </div>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <a href="#" class="flex items-center justify-between">
-                            <div class="w-8 h-8 absolute align-middle"><img src="img/saving.png" alt="saving"></div>
-                            <span class="ml-12 text-xl font-bold hover:text-white">Trip to Paris</span>
+                        <div class="flex items-center justify-between">
+                            <img src="img/saving.png" alt="expense" class="w-14 h-14 absolute align-middle">
+                            <details class="relative">
+                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">Trip to Paris</summary>
+                            </details>
                             <img src="img/26.png" alt="progress" class="max-h-52">
-                        </a>
+                        </div>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <a href="#" class="flex items-center justify-between">
-                            <div class="w-8 h-8 absolute align-middle"><img src="img/saving.png" alt="saving"></div>
-                            <span class="ml-12 text-xl font-bold hover:text-white">Retirement</span>
+                        <div class="flex items-center justify-between">
+                            <img src="img/saving.png" alt="expense" class="w-14 h-14 absolute align-middle">
+                            <details class="relative">
+                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">Retirement</summary>
+                            </details>
                             <img src="img/96.png" alt="progress" class="max-h-52">
-                        </a>
+                        </div>
                     </li>
                 </div>
             </ul>
