--- a/Mockup(HTMLCSS)/src/budget.html
+++ b/Mockup(HTMLCSS)/src/budget.html
@@ -38,29 +38,41 @@
             <ul class="space-y-5">
                 <div class="w-full py-0 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <a href="#" class="flex items-center justify-between">
-                            <div class="w-8 h-8 absolute align-middle"><img src="img/expense.png" alt="expense"></div>
-                            <span class="ml-12 text-xl font-bold hover:text-white">Monthly Grocery Consumption</span>
+                        <div class="flex items-center justify-between">
+                            <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
+                            <details class="relative">
+                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">Monthly Grocery Consumption</summary>
+                                <p class="px-24">Category: Hygiene</p>
+                                <p class="px-24">Start Date: 2023-10-1</p>
+                                <p class="px-24">End Date: 2023-10-31</p>
+                                <p class="px-24">Current Spending: $790</p>
+                                <p class="px-24">Max. Spending: $1000</p>
+                                <p class="px-24">Note: </p>
+                            </details>
                             <img src="img/79.png" alt="progress" class="max-h-52">
-                        </a>
+                        </div>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <a href="#" class="flex items-center justify-between">
-                            <div class="w-8 h-8 absolute align-middle"><img src="img/expense.png" alt="expense"></div>
-                            <span class="ml-12 text-xl font-bold hover:text-white">Seasonal Fashion Expense</span>
+                        <div class="flex items-center justify-between">
+                            <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
+                            <details class="relative">
+                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">Seasonal Fashion Expense</summary>
+                            </details>
                             <img src="img/26.png" alt="progress" class="max-h-52">
-                        </a>
+                        </div>
                     </li>
                 </div>
                 <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
                     <li>
-                        <a href="#" class="flex items-center justify-between">
-                            <div class="w-8 h-8 absolute align-middle"><img src="img/expense.png" alt="expense"></div>
-                            <span class="ml-12 text-xl font-bold hover:text-white">Entertainment Cost</span>
+                        <div class="flex items-center justify-between">
+                            <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
+                            <details class="relative">
+                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">Entertainment Cost</summary>
+                            </details>
                             <img src="img/96.png" alt="progress" class="max-h-52">
-                        </a>
+                        </div>
                     </li>
                 </div>
             </ul>
