--- a/Mockup(HTMLCSS)/src/create-budget.html
+++ b/Mockup(HTMLCSS)/src/create-budget.html
@@ -54,7 +54,7 @@
             <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" name="note">
 
             <a href="budget.html">
-                <button class="object-right bg-pink-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md">Save</button>
+                <button class="object-right bg-pink-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md">Create</button>
             </a>
             <a href="budget.html">
                 <button class="object-right hover:text-white font-bold py-2 px-4 rounded-md">Cancel</button>
