image background fix for budget

--- a/Mockup(HTMLCSS)/src/budget.html
+++ b/Mockup(HTMLCSS)/src/budget.html
@@ -41,7 +41,7 @@
                         <div class="flex items-center justify-between">
                             <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
                             <details class="relative">
-                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">Monthly Grocery Consumption</summary>
+                                <summary class="p-4 w-1/2 ml-12 text-xl font-bold hover:text-white">Monthly Grocery Consumption</summary>
                                 <p class="px-24">Category: Hygiene</p>
                                 <p class="px-24">Start Date: 2023-10-1</p>
                                 <p class="px-24">End Date: 2023-10-31</p>
@@ -49,7 +49,7 @@
                                 <p class="px-24">Max. Spending: $1000</p>
                                 <p class="px-24">Note: </p>
                             </details>
-                            <img src="img/79.png" alt="progress" class="max-h-52">
+                            <img src="img/79.png" alt="progress" class="max-h-52 w-1/2">
                         </div>
                     </li>
                 </div>
@@ -58,9 +58,9 @@
                         <div class="flex items-center justify-between">
                             <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
                             <details class="relative">
-                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">Seasonal Fashion Expense</summary>
+                                <summary class="p-4 w-1/2 ml-12 text-xl font-bold hover:text-white">Seasonal Fashion Expense</summary>
                             </details>
-                            <img src="img/26.png" alt="progress" class="max-h-52">
+                            <img src="img/26.png" alt="progress" class="max-h-52 w-1/2">
                         </div>
                     </li>
                 </div>
@@ -69,9 +69,9 @@
                         <div class="flex items-center justify-between">
                             <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
                             <details class="relative">
-                                <summary class="p-4 w-48 ml-12 text-xl font-bold hover:text-white">Entertainment Cost</summary>
+                                <summary class="p-4 w-1/2 ml-12 text-xl font-bold hover:text-white ">Entertainment Cost</summary>
                             </details>
-                            <img src="img/96.png" alt="progress" class="max-h-52">
+                            <img src="img/96.png" alt="progress" class="max-h-52 w-1/2">
                         </div>
                     </li>
                 </div>
@@ -79,40 +79,40 @@
         </div>
     </main>
 
-    <!-- Bottom Navigation Bar -->
-    <nav class="fixed bottom-0 left-0 w-full p-0 bg-violet-900">
-        <div class="container mx-auto flex justify-between items-center h-20 p-0">
-            <a href="account.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/account(white).png" alt="accounticon" class="h-10" srcset="">
-                <div class=" text-sm h-4 flex items-center justify-center">
-                    Account
-                </div>
-            </a>
-            <a href="category.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/category(white).png" alt="categoryicon" class="h-10" srcset="">
-                <div class= "text-sm h-4 flex items-center justify-center">
-                    Category
-                </div>
-            </a>
-            <a href="index.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/dashboard(white).png" alt="dashboardicon" class="h-10" srcset="">
-                <div class=" text-sm h-4 flex items-center justify-center">
-                    Dashboard
-                </div>
-            </a>
-            <a href="budget.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/budget(white).png" alt="budgeticono" class="h-10" srcset="">
-                <div class=" text-sm h-4 flex items-center justify-center">
-                    Budget
-                </div>
-            </a>
-            <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
-                <img src="img/settings(white).png" alt="settingsicon" class="h-10" srcset="">
-                <div class=" text-sm h-4 flex items-center justify-center">
-                    Settings
-                </div>
-            </a>
-        </div>
-    </nav>
+   <!-- Bottom Navigation Bar -->
+   <nav class="fixed bottom-0 left-0 w-full p-0 bg-violet-900">
+    <div class="container mx-auto flex justify-between items-center h-20 p-0">
+        <a href="account.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+            <img src="img/account(white).png" alt="accounticon" class="h-10" srcset="">
+            <div class=" text-sm h-4 flex items-center justify-center">
+                Account
+            </div>
+        </a>
+        <a href="category.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+            <img src="img/category(white).png" alt="categoryicon" class="h-10" srcset="">
+            <div class= "text-sm h-4 flex items-center justify-center">
+                Category
+            </div>
+        </a>
+        <a href="index.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+            <img src="img/dashboard(white).png" alt="dashboardicon" class="h-10" srcset="">
+            <div class=" text-sm h-4 flex items-center justify-center">
+                Dashboard
+            </div>
+        </a>
+        <a href="budget.html" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+            <img src="img/budget(white).png" alt="budgeticono" class="h-10" srcset="">
+            <div class=" text-sm h-4 flex items-center justify-center">
+                Budget
+            </div>
+        </a>
+        <a href="#" class="w-1/5 flex flex-col items-center hover:text-white text-fuchsia-400">
+            <img src="img/settings(white).png" alt="settingsicon" class="h-10" srcset="">
+            <div class=" text-sm h-4 flex items-center justify-center">
+                Settings
+            </div>
+        </a>
+    </div>
+</nav>
 </body>
 </html>
